--- a/animation-activity/activity.css
+++ b/animation-activity/activity.css
@@ -1,21 +1,22 @@
-.hamburger:hover > div:nth-child(1){
+.hamburger:hover>div:nth-child(1) {
   background-color: ghostwhite;
   animation-name: top;
   animation-duration: 1s;
   animation-fill-mode: forwards;
 }
 
-.hamburger:hover > div:nth-child(2){
+.hamburger:hover>div:nth-child(2) {
   animation-name: middle;
   animation-duration: .1s;
   animation-fill-mode: forwards;
 }
 
-.hamburger:hover > div:nth-child(3){
+.hamburger:hover>div:nth-child(3) {
   background-color: ghostwhite;
   animation-name: bottom;
   animation-duration: 1s;
   animation-fill-mode: forwards;
+  animation: rotate(45deg)
 }
 
 nav {
@@ -23,21 +24,36 @@ nav {
   transition-duration: 1s;
 }
 
-.hamburger:hover ~ nav {
+.hamburger:hover~nav {
   opacity: 1;
 }
 
 @keyframes top {
-  from {}
-  to {}
+  from {
+    transform: rotate(0deg)
+  }
+
+  to {
+    transform-origin: left;
+    transform: translate(20%, 90%) rotate(45deg)
+  }
 }
 
 @keyframes middle {
-  from {}
-  to {}
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
 }
 
 @keyframes bottom {
   from {}
-  to {}
+
+  to {
+    transform-origin: left;
+    transform: translate(20%, -90%) rotate(-45deg)
+  }
 }
